--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.4",
   "private": false,
   "dependencies": {
+    "axios": "^0.19.2",
+    "mysql": "^2.18.1",
+    "pomelo-protobuf": "0.3.5",
+    "pomelo-protocol": "0.1.0",
     "socket.io": "0.9.13",
     "socket.io-client": "0.9.11",
     "underscore": "1.4.4"
+  },
+  "devDependencies": {
+    "@types/bluebird": "^3.5.19",
+    "@types/mysql": "^2.15.7",
+    "@types/node": "^8.5.2",
+    "@types/redis": "^2.8.14",
+    "copyfiles": "^2.1.1"
   },
   "readmeFilename": "README.md",
   "gitHead": "d33db82d670b7a5d21c95e15f91548f8a8ba7821",
